fix(style): year numbers could be covered by text in mobile version

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -675,7 +675,6 @@ footer.sticky-bottom {
     border-top: 1px solid var(--global-divider-color);
     padding-top: 1rem;
     margin-top: 2rem;
-    margin-bottom: -2rem;
     text-align: right;
   }
 
